Fixed z-index in css

--- a/notifyme.css
+++ b/notifyme.css
@@ -39,11 +39,13 @@
     font-size: 90%;
     font-family: 'Helvetica Neue', 'Segoe UI', Helvetica, Arial, sans-serif;
     max-width: 370px;
+    z-index: 9999999999999;
 }
 
 .notifyme-notification p {
     margin: 0;
     line-height: 1.3;
+    font-size: 14px;
 }
 
 .notifyme-notification a {
